Atualizando templates e criando extensoes

--- a/delivery/templates/base.html
+++ b/delivery/templates/base.html
@@ -15,7 +15,7 @@
     {% block nav %}
       <nav class="navbar" role="navigation" aria-label="main navigation">
          <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
+            <a class="navbar-item"  >
                <strong>Vargens Foods</strong>
             </a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -26,10 +26,10 @@
          </div>
          <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-               <a class="navbar-item">
+               <a class="navbar-item" href=" {{url_for('site.index') }}">
                Home
                </a>
-               <a class="navbar-item">
+               <a class="navbar-item" href=" {{ url_for('site.restaurants') }} ">
                Restaurantes
                </a>
                <div class="navbar-item has-dropdown is-hoverable">
@@ -48,6 +48,9 @@
                      </a>
                   </div>
                </div>
+               <a class="navbar-item" href=" {{ url_for('site.about') }} ">
+                  Sobre
+               </a>               
             </div>
             <div class="navbar-end">
                <div class="navbar-item">
