--- a/delivery/templates/restaurants.html
+++ b/delivery/templates/restaurants.html
@@ -17,11 +17,11 @@
    {% endblock top %}
 
    {% block main %}
-            <div class="columns">
+   <div class="columns">
                
-               {{ list_item.cards([1, 2, 3, 4]) }}   
-               
-              </div>
+    {{ list_item.cards([1, 2, 3, 4, 5, 6, 7, 8]) }}   
+    
+   </div>
 
    {% endblock main %}
 
